# Mini-LeWM

./: .gitignore  Makefile  README.md  pyproject.toml
config/: base.yaml
config/data/: medium.yaml  small.yaml
config/env/: pointworld.yaml  pointworld_wall.yaml
config/model/: cnn_gru.yaml  cnn_mlp.yaml
config/train/: lambda_0.yaml  lambda_001.yaml  lambda_01.yaml  lambda_03.yaml
data/manifests/: pointworld_medium.yaml  pointworld_small.yaml
scripts/: eval_collapse.py  eval_probe.py  eval_rollout.py  generate_data.py  train.py
src/mini_lewm/: __init__.py  cli.py
src/mini_lewm/data/: __init__.py  dataset.py  generate.py  storage.py
src/mini_lewm/env/: __init__.py  pointworld.py
src/mini_lewm/eval/: __init__.py  collapse.py  probe.py  rollout.py
src/mini_lewm/losses/: __init__.py  predictive.py  sigreg.py
src/mini_lewm/models/: __init__.py  encoder.py  predictor.py  projector.py  world_model.py
src/mini_lewm/train/: checkpoints.py  loops.py  trainer.py
src/mini_lewm/utils/: config.py  device.py  logging.py  metrics.py  paths.py  seed.py
src/mini_lewm/viz/: __init__.py  plots.py  render.py
tests/: test_dataset.py  test_device.py  test_env.py  test_models.py  test_sigreg.py  test_train_step.py
